--- a/index.html
+++ b/index.html
@@ -1648,14 +1648,9 @@
                     <p class="leadership-description">Led a team of 5 developers to create an AI-powered waste management system. Coordinated development tasks, conducted code reviews, and ensured timely delivery of project milestones.</p>
                 </div>
                 <div class="leadership-card">
-                    <div class="leadership-icon"><i class="fas fa-trophy"></i></div>
-                    <h3 class="leadership-title">Hackathon Winner</h3>
-                    <p class="leadership-description">Won first place in a 48-hour hackathon for developing an innovative IoT-based classroom maintenance system. Demonstrated strong problem-solving and rapid prototyping skills.</p>
-                </div>
-                <div class="leadership-card">
                     <div class="leadership-icon"><i class="fas fa-graduation-cap"></i></div>
                     <h3 class="leadership-title">Technical Workshop Instructor</h3>
-                    <p class="leadership-description">Conducted workshops on React.js and Node.js for fellow students, sharing knowledge and best practices in modern web development.</p>
+                    <p class="leadership-description">Conducted workshops on React.js and Django for fellow students, sharing knowledge and best practices in modern web development.</p>
                 </div>
             </div>
         </div>
@@ -1760,7 +1755,7 @@
         <div class="projects-grid">
             <div class="project-card featured">
                 <div>
-                    <img src="https://picsum.photos/seed/waste-management/600/400.jpg" alt="Smart Waste Management System" class="project-img">
+                    <img src="img3.jpg" alt="Smart Waste Management System" class="project-img">
                     <span class="project-badge">Featured Project</span>
                 </div>
                 <div class="project-content">
@@ -1779,7 +1774,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://picsum.photos/seed/result-management/400/200.jpg" alt="Result Management System" class="project-img">
+                <img src="" alt="Result Management System" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Result Management System</h3>
                     <p class="project-description">A comprehensive system for educational institutions to manage student results, generate reports, and provide analytics for performance improvement.</p>
@@ -1796,7 +1791,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://picsum.photos/seed/chatbot/400/200.jpg" alt="Chatbot Assistant" class="project-img">
+                <img src="" alt="Chatbot Assistant" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Chatbot Assistant</h3>
                     <p class="project-description">An intelligent conversational AI assistant built with NLP capabilities to handle customer queries and provide personalized responses.</p>
@@ -1813,7 +1808,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="https://picsum.photos/seed/classroom/400/200.jpg" alt="Smart Classroom Maintenance System" class="project-img">
+                <img src="" alt="Smart Classroom Maintenance System" class="project-img">
                 <div class="project-content">
                     <h3 class="project-title">Smart Classroom Maintenance System</h3>
                     <p class="project-description">An IoT-enabled system for monitoring and maintaining classroom environments, ensuring optimal conditions for learning and resource management.</p>
@@ -1840,33 +1835,33 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2021 - Present</div>
-                        <h3 class="timeline-title">Full Stack Developer</h3>
-                        <p class="timeline-description">Working on various web development projects, specializing in React.js, Node.js, and AI-driven solutions.</p>
+                        <div class="timeline-date">2023 - Present</div>
+                        <h3 class="timeline-title">In my 3rd year</h3>
+                        <p class="timeline-description">Working on various web development projects, specializing in React.js,Django, and AI-driven solutions.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2020 - 2021</div>
-                        <h3 class="timeline-title">Web Development Intern</h3>
-                        <p class="timeline-description">Gained hands-on experience in developing responsive web applications using modern technologies.</p>
+                        <div class="timeline-date">2023</div>
+                        <h3 class="timeline-title">First year of b.tech</h3>
+                        <p class="timeline-description">Gained proper knowledge about web applications using modern technologies.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2019 - 2023</div>
-                        <h3 class="timeline-title">B.Tech in Computer Science</h3>
-                        <p class="timeline-description">Studied at Einstein Academy of Technology and Management, focusing on software development and AI.</p>
+                        <div class="timeline-date">2021 - 2023</div>
+                        <h3 class="timeline-title">My +2 career</h3>
+                        <p class="timeline-description">Studied at Teerahedran college, focusing on software development by reading basic coding language.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <div class="timeline-date">2019</div>
-                        <h3 class="timeline-title">Started Coding Journey</h3>
-                        <p class="timeline-description">Began learning programming languages and web development fundamentals.</p>
+                        <div class="timeline-date">2020</div>
+                        <h3 class="timeline-title">Ending my school Journey</h3>
+                        <p class="timeline-description">Started interest about learning programming languages and web development fundamentals.</p>
                     </div>
                 </div>
             </div>
